[tool.poetry]
name = "lab4"
version = "0.1.0"
description = ""
authors = ["Ivan <ivan.dumych.knm.2019@lpnu.ua>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
waitress = "^1.4.4"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
marshmallow = "^3.9.1"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
